initial html and css

--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -5,16 +5,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>flrish</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="main.js"></script>
+  <style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .main-nav {
+    display: flex;
+    justify-content: space-around;
+    background-color: #D11F66;
+    list-style: none;
+  }
+  
+  body {
+    margin: 0;
+  }
+
+  .welcome-message {
+    padding: 35%;
+  }
+
+  .browse-button {
+    padding: 40%;
+  }
+  </style>
 </head>
 <body>
-  <h1>Welcome to flrish.</h1>
-  <br>
-  <br>
-  <p>
-    A marketplace for indie games.
-  </p>
+<!-- Section 1: Nav -->
+<nav>
+  <ul class="main-nav">
+    <li>flrish</li>
+    <li>Sign Up</li>
+    <li>Sign In</li>
+  </ul>
+</nav>
+<br>
+<br>
+<div class='welcome-message'>
+  <p>A marketplace for indie games.</p>
+</div>
+<br>
+<br>
+<br>
+<div class='browse-button'>
+  <p>BROWSE GAMES</p>
+</div>
+
   
 </body>
 </html>
