--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,8 +36,8 @@
 <nav>
   <ul class="main-nav">
     <li>flrish</li>
-    <li>Sign Up</li>
-    <li>Sign In</li>
+    <li><%= link_to "Sign Up", '/users/sign_up' %></li>
+    <li><%= link_to "Sign In", '/users/sign_in' %></li>
   </ul>
 </nav>
 <br>
