--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="main.js"></script>
   <style>
+  
   * {
     margin: 0;
     padding: 0;
@@ -23,12 +24,6 @@
     margin: 0;
   }
 
-  .welcome-message {
-  }
-
-  .browse-button {
-
-  }
   </style>
 </head>
 <body>
@@ -49,7 +44,7 @@
 <br>
 <br>
 <div class='browse-button'>
-  <p>BROWSE GAMES</p>
+  <p><%= link_to "BROWSE GAMES", '/games' %></p>
 </div>
 
   
