add uploader to form

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :price %>
   </div>
 
+  <div class="field">
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
