update games form

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :image %><br>
-    <%= form.file_field :image %>
+    <%= form.label :cover %><br>
+    <%= form.file_field :cover %>
   </div>
 
   <div class="actions">
