--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <%= @game.cover %>
+  <%= image_tag (@game.cover.url, alt: 'Cover') if @game.cover? %>
 </p>
 
 <p>
