--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @games.each do |game| %>
       <tr>
-        <td><%= game.cover %></td>
+        <td><%= image_tag game.cover.url %></td>
         <td><%= game.title %></td>
         <td><%= game.description %></td>
         <td><%= game.price %></td>
