--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Game</h1>
+<div class="all_views">
+  <h1>Editing Game</h1>
 
-<%= render 'form', game: @game %>
+  <%= render 'form', game: @game %>
 
-<%= link_to 'Show', @game %> |
-<%= link_to 'Back', games_path %>
+  <%= link_to 'Show', @game %> |
+  <%= link_to 'Back', games_path %>
+</div>
