--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,33 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class="all_views">
+  <p id="notice"><%= notice %></p>
 
-<h1>Games</h1>
+  <h1>Games</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @games.each do |game| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= image_tag game.cover.url %></td>
-        <td><%= game.title %></td>
-        <td><%= game.description %></td>
-        <td><%= game.price %></td>
-        <td><%= link_to 'Show', game %></td>
-        <td><%= link_to 'Edit', edit_game_path(game) %></td>
-        <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Image</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @games.each do |game| %>
+        <tr>
+          <td><%= image_tag game.cover.url %></td>
+          <td><%= game.title %></td>
+          <td><%= game.description %></td>
+          <td><%= game.price %></td>
+          <td><%= link_to 'Show', game %></td>
+          <td><%= link_to 'Edit', edit_game_path(game) %></td>
+          <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Game', new_game_path %>
+  <br>
+
+  <%= link_to 'New Game', new_game_path %>
+</div>
