--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,7 +19,8 @@
     <strong>Price:</strong>
     <%= @game.price %>
   </p>
-
+  <% if can? :manage, Game %>
   <%= link_to 'Edit', edit_game_path(@game) %> |
+  <% end %>
   <%= link_to 'Back', games_path %>
 </div>
