--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,7 +19,7 @@
     <strong>Price:</strong>
     <%= @game.price %>
   </p>
-  <% if can? :manage, Game %>
+  <% if @game.user_id == current_user.try(:id)  %>
   <%= link_to 'Edit', edit_game_path(@game) %> |
   <% end %>
   <%= link_to 'Back', games_path %>
