--- a/app/views/user_notifier_mailer/send_new_game_email.html.erb
+++ b/app/views/user_notifier_mailer/send_new_game_email.html.erb
@@ -4,8 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Thanks for signing up, <%= @user.email %>!</h1>
-    <p>Thanks for joining and have a great day! Now sign in and do
-    awesome things!</p>
+    <h1>Good job, <%= @user.email %>!</h1>
+    <p>You've taken your first step and displayed your game to the world. 
+    Flrish wishes you the best of luck with selling your game!</p>
   </body>
 </html>
