--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,8 +16,25 @@
   </p>
 
   <p>
-    <strong>Price:</strong>
-    <%= @game.price %>
+  <%= form_tag charges_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="price">
+      <span><strong>Price: </strong><%= @game.price %></span>
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+  data-description = "Buy the game"
+  data-amount = "500"
+  data-locale = "auto"></script>
+  <% end %>
+
   </p>
   <% if @game.user_id == current_user.try(:id)  %>
   <%= link_to 'Edit', edit_game_path(@game) %> |
