--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,7 +16,9 @@
   </p>
 
   <p>
+  <% @amount = @game.price * 100 %>
   <%= form_tag charges_path do %>
+  
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
@@ -27,13 +29,19 @@
       <span><strong>Price: </strong><%= @game.price %></span>
     </label>
   </article>
-
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-  data-description = "Buy the game"
-  data-amount = "500"
-  data-locale = "auto"></script>
-  <% end %>
+  <%= hidden_field_tag "game_id", "#{@game.id}" %>
+   <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
+   class: 'stripe-button',
+   data: {
+     key: ENV["STRIPE_PUBLISHABLE_KEY"],
+     amount: @amount,
+     name: "flrish",
+     description: @game.title,
+     image: "https://stripe.com/img/documentation/checkout/marketplace.png",
+     locale: "auto",
+     currency: "aud"
+   }%>
+   <% end %>
 
   </p>
   <% if @game.user_id == current_user.try(:id)  %>
