change search label

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,7 +4,7 @@
   <h1>Games</h1>
 
   <%= search_form_for @q do |f| %>
-  <%= f.label :title_cont %>
+  <%= f.label :search_for_game %>
   <%= f.search_field :title_cont %>
   <%= f.submit %>
   <% end %>
