--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -29,19 +29,22 @@
       <span><strong>Price: </strong><%= @game.price %></span>
     </label>
   </article>
-  <%= hidden_field_tag "game_id", "#{@game.id}" %>
-   <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
-   class: 'stripe-button',
-   data: {
-     key: ENV["STRIPE_PUBLISHABLE_KEY"],
-     amount: @amount,
-     name: "flrish",
-     description: @game.title,
-     image: "https://stripe.com/img/documentation/checkout/marketplace.png",
-     locale: "auto",
-     currency: "aud"
-   }%>
-   <% end %>
+
+  <% if can? :manage, Game %>
+    <%= hidden_field_tag "game_id", "#{@game.id}" %>
+    <%= javascript_include_tag 'https://checkout.stripe.com/checkout.js',
+      class: 'stripe-button',
+      data: {
+      key: ENV["STRIPE_PUBLISHABLE_KEY"],
+      amount: @amount,
+      name: "flrish",
+      description: @game.title,
+      image: "https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true",
+      locale: "auto",
+      currency: "aud"
+      }%>
+    <% end %>
+  <% end %>
 
   </p>
   <% if @game.user_id == current_user.try(:id)  %>
