--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,8 @@
 <html>
   <head>
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
-    <link rel="manifest" href="public/favicon/site.webmanifest">
-    <link rel="mask-icon" href="public/favicon/safari-pinned-tab.svg" color="#d11f66">
-    <meta name="msapplication-TileColor" content="#171616">
-    <meta name="theme-color" content="#ffffff">
+    <%= favicon_link_tag ('favicon.ico'), :rel => 'icon', :type =>  'image/x-icon'%>
+    
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,800" rel="stylesheet">
