--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,17 @@
     <!-- Section 1: Nav -->
     <nav>
       <ul class="main-nav">
-        <li class="logo"><%= link_to "flrish", '/welcome' %></li>
-        <li><%= link_to "Browse", '/games' %></li>
-        <li><%= link_to "Sign Up", '/users/sign_up' %></li>
-        <li><%= link_to "Sign In", '/users/sign_in' %></li>
-        <li><%= link_to "Sign Out", '/users/sign_out' %></li>
+        <li class="logo"><%= link_to('flrish', welcome_path) %></li>
+        <li><%= link_to('Games', games_path) %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to('Logout', destroy_user_session_path) %></li>
+        <% else %>
+          <li><%= link_to('Sign Up', new_user_registration_path) %></li>
+          <li><%= link_to('Login', new_user_session_path)  %></li>
+        <% end %>
       </ul>
     </nav>
+    
     <div class="all_views">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
