fix button paths

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,6 +9,8 @@
   <%= f.submit %>
   <% end %>
 
+  <span><%= link_to('Browse All Games', games_path) %></span>
+
   <table>
     <thead>
       <tr>
