--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,6 @@
   </div>
   <br><br><br>
   <div class='browse-button'>
-    <p><%= link_to "BROWSE GAMES", '/games' %></p>
+    <p><%= link_to('Browse Games', games_path) %></p>
   </div>
 </div>
