update game index table headings

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -17,9 +17,9 @@
         <th><%= sort_link(@q, :title) %></th>
       </tr>
       <tr>
-        <th>Image</th>
-        <th>Title</th>
-        <th>Description</th>
+        <th></th>
+        <th>Game</th>
+        <th></th>
         <th>Price</th>
         <th colspan="3"></th>
       </tr>
