--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <!-- Favicons -->
     <%= favicon_link_tag ('favicon.ico'), :rel => 'icon', :type =>  'image/x-icon'%>
     
@@ -14,12 +15,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    
   </head>
 
   <body>
     <!-- Section 1: Nav -->
     <nav>
-      <ul class="main-nav">
+      <ul class="nav-container">
         <li class="logo"><%= link_to('flrish', welcome_path) %></li>
         <% if user_signed_in? %>
           <li><%= link_to('Logout', destroy_user_session_path) %></li>
