--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -2,13 +2,13 @@ body {
   background-color: #fff;
   color: #333;
   margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
@@ -20,15 +20,15 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #fdfdfd;
 
   &:visited {
-    color: #666;
+    color: none;
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #d11f66;
+    background-color: none;
   }
 }
 
