--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
   <head>
 
+    <!-- Responsive Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Favicons -->
     <%= favicon_link_tag ('favicon.ico'), :rel => 'icon', :type =>  'image/x-icon'%>
     
@@ -9,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,800" rel="stylesheet">
     
-    <title>flrish</title>
+    <title>flrish.</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
