--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="all_views">
-
+  <div class='welcome'><h1>WELCOME TO</h1></div>
   <div class='welcome-message'>
-    <p>A marketplace for indie games.</p>
+    <span>A marketplace for indie games.</span>
   </div>
 
   <div class='browse-button'>
