--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,11 +27,13 @@
 .nav-container {
   display: flex;
   justify-content: flex-end;
+  align-items: baseline;
   list-style: none;
   width: 100%;
   background-color: #d11f66;
   height: 5rem;
-  padding: 2%;
+  padding: 3%;
+  /*box-shadow: 0px -26px 69px 13px rgba(245,245,245,1);*/
 }
 
 .nav_container li {
@@ -64,24 +66,48 @@
 
 /* NAV BAR @MEDIA */
 
-@media all and (max-width: 600px) {
-  .main-nav {
+@media screen and (max-width: 600px) {
+  .nav_container {
     flex-wrap: wrap;
   }
-  .main-nav > li {
+  .nav_container > li {
     flex-basis: 50%;
     padding: 1%;
   }
 }
 
-@media all and (max-width: 425px) {
-  .main-nav > li {
+@media screen and (max-width: 425px) {
+  .nav_container > li {
     flex-basis: 100%;
     padding: 2%;
   }
 }
 
 /* WELCOME PAGE */
+
+.welcome-container {
+
+}
+
+.welcome {
+  
+}
+
+.home-logo img {
+  height: 30%;
+  width: 30%;
+  
+}
+
+.welcome-message {
+  
+}
+
+.browse-button {
+  
+}
+
+/* WELCOME @MEDIA */
 
 
 
