--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,11 @@
-<div class="all_views">
+<div class="welcome-container">
 
   <div class='welcome'><h1>WELCOME TO</h1></div>
-  
+
+  <div class='home-logo'>
+  <img src='https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true' alt='flourish logo'>
+  </div>
+
   <div class='welcome-message'>
     <span>A marketplace for indie games.</span>
   </div>
