--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,23 @@
 <div class="container">
   <div class='welcome'><h1>WELCOME TO</h1></div>
 
-  <div class='home-logo'>
-  <img src='https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true' alt='flourish logo'>
+
+  <div class="row">
+    <div class="col-md-12 home-logo">
+      <img src='https://github.com/rhyswoodberry/flrish/blob/master/read_me_images/flrish-logo.png?raw=true' alt='flourish logo'>
+    </div>
   </div>
 
-  <div class='welcome-message'>
-    <span>A marketplace for indie games.</span>
+  <div class="row">
+    <div class="col-md-12 welcome-message">
+      <span>A marketplace for indie games.</span>
+    </div>
   </div>
 
-  <div class='browse-button'>
-    <p><%= link_to('Browse Games', games_path) %></p>
+  <div class="row">
+    <div class="col-md-12 browse-button">
+      <p><%= link_to('Browse Games', games_path) %></p>
+    </div>
   </div>
+
 </div>
