make homepage logo bigger

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,6 +87,8 @@
 
 .welcome {
   text-align: center;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;
 }
 
 .home-logo {
@@ -96,8 +98,8 @@
 }
 
 .home-logo img {
-  width: 200px;
-  height: 200px;
+  width: 450px;
+  height: 450px;
 }
 
 .welcome-message {
