fix footer layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,9 +134,9 @@ footer {
   display: flex;
   justify-content: center;
   text-align: center;
-  background-color: #d11f66;
+  background-color: #312f2f;
   font-family: 'Nunito Sans', sans-serif;
-  color: #171616;
+  color: #f5f5f5;
 }
 
 footer > div {
