--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicons -->
-    <%= favicon_link_tag ('favicon.ico'), :rel => 'icon', :type =>  'image/x-icon'%>
+    <%= render 'application/favicon' %>
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
