home styling complete

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,9 +15,13 @@
       <p>Flrish is a marketplace for people who are passionate 
       about making games, and playing games. It is a place where 
       up and coming developers can get thier foot in the door and 
-      sell their games to a dedicated audience. Currently, there 
-      are several features in the works to make your experience here
-      on flrish, even better! Stay tuned, and game on.</p>
+      sell their games to a dedicated audience. All you need to do to 
+      start buying and selling is to sign up. Once logged in, you can 
+      upload a game, or browse the marketplace. All payments on flrish 
+      are handled through Stripe, but fear not! All you need is a flrish 
+      account and you're good to go! Currently, there are several 
+      features in the works to make your experience here on flrish, 
+      even better! Stay tuned, and game on.</p>
     </div>
   </div>
 
