--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -155,3 +155,12 @@ footer {
 footer > div {
   flex: 1;
 }
+
+footer a {
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
+footer a:hover {
+  color: #d11f66;
+}
