--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,6 +138,12 @@
 
 /* GAMES INDEX */
 
+.games-index {
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;
+  text-align: center;
+}
+
 
 
 body {
