--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,8 +27,7 @@
 
   <div class="row">
     <div class="col-md-12">
-        <%= link_to("<button class='btn btn-secondary btn-lg btn-block browse-button'>Browse Games</button>".html_safe, games_path) %>
-      </button>
+        <%= link_to("<button class='btn btn-secondary btn-lg btn-block browse-button'>Browse Games Marketplace</button>".html_safe, games_path) %>
     </div>
   </div>
   
