--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,6 +149,7 @@
   color: #f5f5f5;
   text-decoration: none;
   padding-right: 10px;
+  padding-left: 10px;
 
 }
 
@@ -161,6 +162,25 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding-bottom: 50px;
+}
+
+.sort-filter a {
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
+.sort-filter a:hover {
+  color: #d11f66;
+}
+
+.game-listings {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #312f2f;
 }
 
 /* BODY */
