--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -8,6 +8,7 @@
 
 <div class='row'>
   <div class='col-md-12 search-bar'>
+    <span class='sort-filter'><%= sort_link(@q, :title) %></span>
     <span class='all-games-link'> <%= link_to('View All Games', games_path) %> </span>
     <%= search_form_for @q do |f| %>
     <%= f.search_field :title_cont %>
@@ -16,25 +17,17 @@
   </div>
 </div>
 
-<div class='row'>
-  <div class='col-md-3 all-games-link'>
-    
-  </div>
-</div>
 
-
-<table class="table">
+<table class="table game-listings">
   <thead>
+    <!-- Figure out what to do with these?
     <tr>
-      <th scope="col" class='sort-filter'><%= sort_link(@q, :title) %></th>
-    </tr>
-    <tr>
-      <th scope="col"></th>
+      <th scope="col">Cover</th>
       <th scope="col">Game</th>
-      <th scope="col"></th>
+      <th scope="col">Decription</th>
       <th scope="col">Price</th>
       <th colspan="3"></th>
-    </tr>
+    </tr> -->
   </thead>
 
   <tbody>
