--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,6 +30,8 @@
       <div class='btn btn-secondary btn-lg btn-block browse-button'>
         <%= link_to("Browse Games Marketplace", games_path) %>
       </div>
+      <!-- Figure out how to get this one working -->
+      <!--<%= link_to("<button class='btn btn-secondary btn-lg btn-block browse-button'>Browse Games Marketplace</button>".html_safe, games_path) %>-->
     </div>
   </div>
   
