--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -8,6 +8,7 @@
 
 <div class='row'>
   <div class='col-md-12 search-bar'>
+    <span class='sort-title'>Sort by:</span>
     <span class='sort-filter'><%= sort_link(@q, :title) %></span>
     <span class='search-divider'> | </span>
     <span class='all-games-link'> <%= link_to('View All Games', games_path) %> </span>
