position upload button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -215,6 +215,12 @@
   color: #d11f66;
 }
 
+.upload-button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 35px;
+}
+
 /* BODY */
 
 body {
